API Changed and BG Effect Added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,9 +9,10 @@
 </head>
 
 <body>
+    <div class="layer"></div>
     <div class="main-content">
-        {{>header}}
-        <img class="portrait" src="assets/img/kshitij.jpg">
+        {{>header}}<br><br><br>
+        <img class="portrait" style="background-color: transparent;" src="assets/img/kshitij.jpg">
     </div>
 
     {{>footer}}
