--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -10,8 +10,10 @@
 </head>
 
 <body>
+    <div class="layer"></div>
     {{>header}}
-    <h2>{{errorMessage}}</h2>
+    <br><br>
+    <h2>{{errorMessage}}</h2><br><br>
     {{>footer}}
 </body>
 
