--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+    <div class="layer"></div>
     <div class="main-content">
-        {{>header}}
+        {{>header}}<br><br>
         <p>{{helpText}}</p>
     </div>
-    
+
     {{>footer}}
 </body>
 
