--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+    <div class="layer"></div>
     <div class="main-content">
         {{>header}}
         <br><br><br>
         <form>
-            <input placeholder="Enter Location Name">
+            <input placeholder="Enter City Name">
             <button>Get Forecast</button>
         </form>
         <br>
@@ -25,6 +26,9 @@
 
         </p>
         <p id="msg2">
+
+        </p>
+        <p id="msg3">
 
         </p>
     </div>
