--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -6,7 +6,7 @@
     <link rel="icon" href="./assets/img/weather.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Document</title>
+    <title>404 Page Error</title>
 </head>
 
 <body>
