--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -6,6 +6,11 @@
     <link rel="icon" href="./assets/img/weather.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        * {
+            color: #333;
+        }
+    </style>
     <title>404 Page Error</title>
 </head>
 
