--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -10,6 +10,18 @@
         * {
             color: #333;
         }
+
+        .firstDiv a {
+            color: #333;
+            border: 1.5px solid #333;
+        }
+
+        .firstDiv a:hover {
+            background-color: rgb(117 255 40 / 80%);
+            color: #333;
+            font-weight: bold;
+            border: 2px solid #000;
+        }
     </style>
     <title>404 Page Error</title>
 </head>
